Fixed overflow property for pinned messages

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ code
 {
 	padding: 5px 10px;
 	max-height: 70vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #notifications-parent
